--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div id="movie">
         <h2>here is the movie!</h2>
-       	 <video id = "videoPlay1"width="550" height="340" controls>
+       	 <video id = "videoPlay1"width="650" height="440" controls>
             <source src="images/movie.mp4" type="video/mp4">
           </video>
          <div class="myfunction">
@@ -28,7 +28,7 @@
     </div>
     <div id="tvshow">
         <h2>here is the tvshow!</h2>
-        <video width="550" height="340" controls>
+        <video width="650" height="440" controls>
             <source src="images/tvshow.mp4" type="video/mp4">
           </video>
           <div class="myfunction">
@@ -43,7 +43,7 @@
     <div id="music">
         <h2>here is the music!</h2>
         <audio controls>
-            <source width="550" src="audio/audio1.mp3" type="audio/mpeg">
+            <source width="850px" src="audio/audio1.mp3" type="audio/mpeg">
         </audio>
         <div class="myfunction">
             <img src="images/play.png" alt="">
